--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,11 +82,11 @@ flutter:
         - asset: fonts/Calistoga-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Halant
+      fonts:
+        - asset: fonts/Halant-Medium.ttf
+        # - asset: fonts/TrajanPro_Bold.ttf
+        #   weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
